# MintWiki

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  debug_test.php  docker-compose.yml  pyproject.toml
db/: README.md
docs/: 10-minute-task-plan.md  acl-phase-qa-checklist.md  acl-portable-repository-plan.md  ansi-db-phase-summary.md  ansi-sql-persistence-policy.md  architecture.md  audit-portable-repository-plan.md  compatibility-report-template.md  completion-summary-0351-0670.md  composer-hosting-deployment.md  config-file-permission-policy.md  contract-drift-report.md  cookie-security-policy.md  cross-language-fixture-schema.md  db-adapter-contract.md  db-adapter-selection.md  db-module-replacement-matrix.md  db-phase-qa-checklist.md  db-phase-readiness-gate.md  db-phase-risk-register.md  db-portability-qa-paths.md  db-web-hosting-constraints.md  discussion-portable-repository-plan.md  dto-naming-convention.md  export-directory-policy.md  final-python-to-php-cutover-plan.md  fixture-directory-convention.md  hosting-phase-qa-checklist.md  installer-lock-file-policy.md  iowiki-shared-hosting-porting-log.md  job-model.md  job-runner-url-guide.md  jobs-polling-portable-policy.md  jobs-portable-repository-plan.md  live-hosting-e2e-smoke-log.md  mariadb-compatibility-matrix.md  mariadb-health-check.md  mariadb-local-compose-override.md  mariadb-migration-smoke-plan.md  migration-portability-checklist.md  (+84 more)
migrations/: env.py
php/: .gitignore  README.md  composer.json  deployment-package-manifest.json
scripts/: bootstrap.sh  (+19 more)
(+1738 files in other folders)
