[project]
name = "wiki-engine"
version = "0.1.0"
description = "Modular wiki engine inspired by MediaWiki architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "pydantic-settings>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "aiosqlite>=0.19,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
